livesync/couchdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        diun.enable: "true"
        diun.watch_repo: "true"
        diun.sort_tags: "semver"
        diun.max_tags: "2"
        diun.include_tags: '^[0-9]+\.[0-9]+\.[0-9]+$'
      labels:
        app: couchdb
    spec:
      containers:
        - name: couchdb
          image: couchdb:3.5.2
          ports:
            - containerPort: 5984
          readinessProbe:
            tcpSocket:
              port: 5984
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5984
            periodSeconds: 30
            failureThreshold: 3
          resources:
            limits:
              memory: "1Gi"
          volumeMounts:
            - name: data
              mountPath: /opt/couchdb/data
            - name: local-d
              mountPath: /opt/couchdb/etc/local.d
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: couchdb-data-lh
        - name: config
          configMap:
            name: livesync-scripts
        - name: local-d
          emptyDir: {}
