livesync/couchdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
spec:
  ports:
    - name: http
      port: 5984
      targetPort: 5984
  selector:
    app: couchdb
